--- a/starter/src/client/assets/stylesheets/create.css
+++ b/starter/src/client/assets/stylesheets/create.css
@@ -3,7 +3,8 @@
 /* -------------------  MOBILE  --------------------- */
 
 header {
-  background-image: url('https://via.placeholder.com/1150');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+  url('../images/2.jpg');
 }
 
 
