--- a/starter/src/client/assets/stylesheets/form.css
+++ b/starter/src/client/assets/stylesheets/form.css
@@ -1,25 +1,119 @@
 form ul {
-    display: flex;
-    padding: 20px;
+  display: flex;
+  padding: 20px;
 }
 
 form h4 {
-    border-radius: 6px;
-    -webkit-box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
-    -moz-box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
-    box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
-    max-width: 300px;
-    padding: 20px;
-    border: 1px solid #fbf5f5;
-    cursor: pointer;
-    transition: all .6s;
+  border-radius: 6px;
+  -webkit-box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  -moz-box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  max-width: 300px;
+  padding: 20px;
+  border: 1px solid #fbf5f5;
+  cursor: pointer;
+  transition: all 0.6s;
 }
 
-form h4:hover {
-    box-shadow: none;
-    border: 1px solid rgb(109, 233, 23);
+form h4:hover,
+.cards-item:hover {
+  box-shadow: none;
+  border: 1px solid rgb(109, 233, 23);
 }
 
-form h4.selected {
-    border: 1px solid rgb(109, 233, 23);
+form h4.selected,
+.cards-item.selected {
+  border: 1px solid rgb(109, 233, 23);
+}
+
+.button.racer {
+  background-color: #405cf5;
+  border-radius: 6px;
+  border-width: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-size: 100%;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+.cards-item {
+  border-radius: 6px;
+  -webkit-box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  -moz-box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  box-shadow: 5px 7px 5px 0px rgba(237, 230, 237, 1);
+  max-width: 300px;
+  padding: 20px;
+  border: 1px solid #fbf5f5;
+  cursor: pointer;
+  transition: all 0.6s;
+  flex: 1;
+  gap: 10px;
+  width: 100%;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.toast-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  padding: 20px 0;
+  min-width: 300px;
+  max-width: 350px;
+  border-left: 4px solid;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+  background-color: #fff;
+  animation: show 0.3s ease-in-out forwards;
+}
+
+.toast-message.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 32px));
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.toast--error {
+  border-color: #ff623d;
+}
+.toast--info {
+  border-color: #2f86eb;
+}
+@media (max-width: 768px) {
+  .cards-list {
+    flex-direction: column;
+  }
+  .card.track {
+    max-width: unset;
+  }
+  .cards-item {
+    max-width: unset;
+  }
 }
