--- a/starter/src/client/assets/stylesheets/index.css
+++ b/starter/src/client/assets/stylesheets/index.css
@@ -21,7 +21,8 @@ body {
 }
 
 header {
-  background-image: url('https://via.placeholder.com/1150');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+  url('../images/2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
